--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
 
           <div class="message">
             <p class="message-title">メッセージ</p>
-            <p class="message-body">ここにご挨拶文を入れてください。</p>
+            <p class="message-body">「新年あけましておめでとう」というのは伝えたので、以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
+            "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
+            "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ</p>
           </div>
 
           <div class="video-grid">
