--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,14 @@
             <p class="message-title">メッセージ</p>
             <p class="message-body">「新年あけましておめでとう」というのは伝えたので、以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
             "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
-            "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ</p>
+            "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br /><br />
+
+            "君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。"<br />
+            "投げることが好きでも人生は投げないようにしましょう。"<br />
+            "何かを投げたくなったら「仕事」「言葉」「判断」をなげましょう。きっと気が楽になることでしょう。"<br />
+            "~中略~"<br />
+            "ということで、「人生を楽しめよ」という話は終わりにします。あざした〜😎"
+            </p>
           </div>
 
           <div class="video-grid">
