メッセージ調整

--- a/public/index.html
+++ b/public/index.html
@@ -25,22 +25,22 @@
 
       <main class="content">
         <section id="main" class="panel">
-          <h2>本編</h2>
+          <h2>読めばいいと思うよ</h2>
           <p class="lead-sub">
-            年賀ムービーです。お好きな方法で埋め込めます。
+            
           </p>
 
           <div class="message">
-            <p class="message-title">メッセージ</p>
-            <p class="message-body">「新年あけましておめでとう」というのは伝えたので、以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
+            <p class="message-title">神からのお告げ</p>
+            <p class="message-body">「新年あけましておめでとう」というのは伝わっているしょう。次は以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
             "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
             "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br /><br />
 
-            "君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。"<br />
-            "投げることが好きでも人生は投げないようにしましょう。"<br />
-            "何かを投げたくなったら「仕事」「言葉」「判断」をなげましょう。きっと気が楽になることでしょう。"<br />
-            "~中略~"<br />
-            "ということで、「人生を楽しめよ」という話は終わりにします。あざした〜😎"
+            君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。<br />
+            投げることが好きでも人生は投げないようにしましょう。<br />
+            何かを投げたくなったら「仕事」「言葉」「判断」をなげましょう。きっと気が楽になることでしょう。<br />
+            ~~中略~~<br />
+            ということで、「人生を楽しめよ」という話は終わりにします。あざした〜😎
             </p>
           </div>
 
