--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,62 @@
     />
     <meta
       name="description"
-      content="年賀状リンク用のシンプルなページです。"
+      content="年賀状リンク用のシンプルなページ"
     />
     <title>新年のご挨拶</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="photo-sprinkle" aria-hidden="true">
+      <img src="images/photo-01.jpg" alt="" loading="lazy" decoding="async" style="--x: 13.3%; --y: 67.0%; --r: -11.6deg; --s: 0.88; --w: 115px;" />
+      <img src="images/photo-02.jpg" alt="" loading="lazy" decoding="async" style="--x: 73.4%; --y: 69.3%; --r: 1.0deg; --s: 0.8; --w: 149px;" />
+      <img src="images/photo-03.jpg" alt="" loading="lazy" decoding="async" style="--x: 7.2%; --y: 95.5%; --r: 6.1deg; --s: 0.83; --w: 119px;" />
+      <img src="images/photo-04.jpg" alt="" loading="lazy" decoding="async" style="--x: 9.9%; --y: 30.9%; --r: 11.6deg; --s: 0.94; --w: 100px;" />
+      <img src="images/photo-05.jpg" alt="" loading="lazy" decoding="async" style="--x: 89.9%; --y: 93.0%; --r: 8.4deg; --s: 0.87; --w: 99px;" />
+      <img src="images/photo-06.jpg" alt="" loading="lazy" decoding="async" style="--x: 68.4%; --y: 4.4%; --r: 8.5deg; --s: 0.92; --w: 122px;" />
+      <img src="images/photo-07.jpg" alt="" loading="lazy" decoding="async" style="--x: 62.8%; --y: 76.7%; --r: 7.4deg; --s: 0.99; --w: 119px;" />
+      <img src="images/photo-08.jpg" alt="" loading="lazy" decoding="async" style="--x: 24.4%; --y: 16.7%; --r: 10.4deg; --s: 0.94; --w: 104px;" />
+      <img src="images/photo-09.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.6%; --y: 57.4%; --r: -4.9deg; --s: 0.88; --w: 129px;" />
+      <img src="images/photo-10.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.4%; --y: 52.6%; --r: -8.7deg; --s: 0.78; --w: 129px;" />
+      <img src="images/photo-11.jpg" alt="" loading="lazy" decoding="async" style="--x: 66.0%; --y: 82.5%; --r: 7.3deg; --s: 0.86; --w: 136px;" />
+      <img src="images/photo-12.jpg" alt="" loading="lazy" decoding="async" style="--x: 91.2%; --y: 55.8%; --r: -4.1deg; --s: 0.77; --w: 145px;" />
+      <img src="images/photo-13.jpg" alt="" loading="lazy" decoding="async" style="--x: 20.8%; --y: 80.6%; --r: 10.1deg; --s: 1.03; --w: 129px;" />
+      <img src="images/photo-14.jpg" alt="" loading="lazy" decoding="async" style="--x: 75.9%; --y: 92.7%; --r: -4.5deg; --s: 0.93; --w: 149px;" />
+      <img src="images/photo-15.jpg" alt="" loading="lazy" decoding="async" style="--x: 13.6%; --y: 78.1%; --r: -3.7deg; --s: 0.97; --w: 148px;" />
+      <img src="images/photo-16.jpg" alt="" loading="lazy" decoding="async" style="--x: 17.3%; --y: 64.2%; --r: 6.8deg; --s: 0.89; --w: 155px;" />
+      <img src="images/photo-17.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.9%; --y: 45.9%; --r: 3.8deg; --s: 0.77; --w: 107px;" />
+      <img src="images/photo-18.jpg" alt="" loading="lazy" decoding="async" style="--x: 52.9%; --y: 10.5%; --r: 5.5deg; --s: 0.89; --w: 158px;" />
+      <img src="images/photo-19.jpg" alt="" loading="lazy" decoding="async" style="--x: 94.9%; --y: 69.3%; --r: 8.1deg; --s: 0.79; --w: 125px;" />
+      <img src="images/photo-20.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.3%; --y: 7.7%; --r: -7.2deg; --s: 0.95; --w: 93px;" />
+      <img src="images/photo-21.jpg" alt="" loading="lazy" decoding="async" style="--x: 31.8%; --y: 76.2%; --r: -10.2deg; --s: 0.98; --w: 94px;" />
+      <img src="images/photo-22.jpg" alt="" loading="lazy" decoding="async" style="--x: 81.3%; --y: 41.0%; --r: -9.1deg; --s: 0.96; --w: 130px;" />
+      <img src="images/photo-23.jpg" alt="" loading="lazy" decoding="async" style="--x: 11.0%; --y: 57.5%; --r: 8.9deg; --s: 0.76; --w: 131px;" />
+      <img src="images/photo-24.jpg" alt="" loading="lazy" decoding="async" style="--x: 58.7%; --y: 87.8%; --r: -6.6deg; --s: 0.8; --w: 157px;" />
+      <img src="images/photo-25.jpg" alt="" loading="lazy" decoding="async" style="--x: 16.6%; --y: 56.9%; --r: -10.0deg; --s: 0.85; --w: 112px;" />
+      <img src="images/photo-26.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.9%; --y: 50.6%; --r: 0.8deg; --s: 0.81; --w: 107px;" />
+      <img src="images/photo-27.jpg" alt="" loading="lazy" decoding="async" style="--x: 15.2%; --y: 18.1%; --r: -9.0deg; --s: 0.77; --w: 148px;" />
+      <img src="images/photo-28.jpg" alt="" loading="lazy" decoding="async" style="--x: 95.2%; --y: 42.2%; --r: -5.4deg; --s: 0.9; --w: 122px;" />
+      <img src="images/photo-29.jpg" alt="" loading="lazy" decoding="async" style="--x: 33.1%; --y: 94.5%; --r: 5.0deg; --s: 0.84; --w: 117px;" />
+      <img src="images/photo-30.jpg" alt="" loading="lazy" decoding="async" style="--x: 93.3%; --y: 80.4%; --r: 5.3deg; --s: 0.83; --w: 100px;" />
+      <img src="images/photo-31.jpg" alt="" loading="lazy" decoding="async" style="--x: 37.5%; --y: 86.3%; --r: 3.1deg; --s: 0.93; --w: 95px;" />
+      <img src="images/photo-32.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.5%; --y: 32.0%; --r: 3.8deg; --s: 0.95; --w: 121px;" />
+      <img src="images/photo-33.jpg" alt="" loading="lazy" decoding="async" style="--x: 27.1%; --y: 24.8%; --r: -1.1deg; --s: 0.82; --w: 105px;" />
+      <img src="images/photo-34.jpg" alt="" loading="lazy" decoding="async" style="--x: 88.1%; --y: 50.7%; --r: -7.7deg; --s: 1.02; --w: 139px;" />
+      <img src="images/photo-35.jpg" alt="" loading="lazy" decoding="async" style="--x: 89.8%; --y: 16.2%; --r: 3.1deg; --s: 0.77; --w: 129px;" />
+      <img src="images/photo-36.jpg" alt="" loading="lazy" decoding="async" style="--x: 22.4%; --y: 78.3%; --r: 4.3deg; --s: 0.91; --w: 150px;" />
+      <img src="images/photo-37.jpg" alt="" loading="lazy" decoding="async" style="--x: 94.3%; --y: 35.3%; --r: 3.0deg; --s: 1.04; --w: 157px;" />
+      <img src="images/photo-38.jpg" alt="" loading="lazy" decoding="async" style="--x: 27.6%; --y: 51.8%; --r: -2.6deg; --s: 0.77; --w: 143px;" />
+      <img src="images/photo-39.jpg" alt="" loading="lazy" decoding="async" style="--x: 6.8%; --y: 64.5%; --r: -11.5deg; --s: 0.83; --w: 101px;" />
+      <img src="images/photo-40.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.6%; --y: 50.6%; --r: 2.5deg; --s: 0.81; --w: 144px;" />
+      <img src="images/photo-41.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.0%; --y: 4.2%; --r: 11.6deg; --s: 0.77; --w: 158px;" />
+      <img src="images/photo-42.jpg" alt="" loading="lazy" decoding="async" style="--x: 48.6%; --y: 93.8%; --r: -3.9deg; --s: 1.01; --w: 124px;" />
+    </div>
     <div class="page">
       <header class="hero">
-        <div class="badge">迎春</div>
+        <div class="badge">謹賀新年</div>
         <h1>あけましておめでとうございます</h1>
         <p class="lead">
-          <span id="main-year">2025</span>年もよろしくお願いいたします。
+          <span id="main-year">2026</span>年もよろしくお願いいたします。
         </p>
       </header>
 
@@ -77,7 +121,7 @@
       <footer class="footer">
         <span>Happy New Year</span>
         <span class="divider">•</span>
-        <span id="footer-year">2025</span>
+        <span id="footer-year">2026</span>
       </footer>
     </div>
 
