動画配置＋画像調整

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
           </p>
 
           <div class="message">
-            <p class="message-title">神からのお告げ</p>
-            <p class="message-body">「新年あけましておめでとう」というのは伝わっているしょう。次は以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
+            <p class="message-title">お告げ</p>
+            <p class="message-body">「新年あけましておめでとう」というのは伝わっているでしょう。次は以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
             "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
             "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br /><br />
 
@@ -89,22 +89,6 @@
           </div>
 
           <div class="video-grid">
-            <div class="video-card">
-              <div class="video-embed">
-                <iframe
-                  src="https://www.youtube.com/embed/VIDEO_ID"
-                  title="YouTube 埋め込み動画"
-                  loading="lazy"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                  referrerpolicy="strict-origin-when-cross-origin"
-                ></iframe>
-              </div>
-              <p class="caption">
-                YouTube 埋め込み用。<span class="mono">VIDEO_ID</span> を差し替えてください。
-              </p>
-            </div>
-
             <div class="video-card">
               <video controls playsinline preload="metadata">
                 <source src="videos/newyear.mp4" type="video/mp4" />
