--- a/public/index.html
+++ b/public/index.html
@@ -14,51 +14,51 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="photo-sprinkle" aria-hidden="true">
-      <img src="images/photo-01.jpg" alt="" loading="lazy" decoding="async" style="--x: 13.3%; --y: 67.0%; --r: -11.6deg; --s: 0.88; --w: 115px;" />
-      <img src="images/photo-02.jpg" alt="" loading="lazy" decoding="async" style="--x: 73.4%; --y: 69.3%; --r: 1.0deg; --s: 0.8; --w: 149px;" />
-      <img src="images/photo-03.jpg" alt="" loading="lazy" decoding="async" style="--x: 7.2%; --y: 95.5%; --r: 6.1deg; --s: 0.83; --w: 119px;" />
-      <img src="images/photo-04.jpg" alt="" loading="lazy" decoding="async" style="--x: 9.9%; --y: 30.9%; --r: 11.6deg; --s: 0.94; --w: 100px;" />
-      <img src="images/photo-05.jpg" alt="" loading="lazy" decoding="async" style="--x: 89.9%; --y: 93.0%; --r: 8.4deg; --s: 0.87; --w: 99px;" />
-      <img src="images/photo-06.jpg" alt="" loading="lazy" decoding="async" style="--x: 68.4%; --y: 4.4%; --r: 8.5deg; --s: 0.92; --w: 122px;" />
-      <img src="images/photo-07.jpg" alt="" loading="lazy" decoding="async" style="--x: 62.8%; --y: 76.7%; --r: 7.4deg; --s: 0.99; --w: 119px;" />
-      <img src="images/photo-08.jpg" alt="" loading="lazy" decoding="async" style="--x: 24.4%; --y: 16.7%; --r: 10.4deg; --s: 0.94; --w: 104px;" />
-      <img src="images/photo-09.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.6%; --y: 57.4%; --r: -4.9deg; --s: 0.88; --w: 129px;" />
-      <img src="images/photo-10.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.4%; --y: 52.6%; --r: -8.7deg; --s: 0.78; --w: 129px;" />
-      <img src="images/photo-11.jpg" alt="" loading="lazy" decoding="async" style="--x: 66.0%; --y: 82.5%; --r: 7.3deg; --s: 0.86; --w: 136px;" />
-      <img src="images/photo-12.jpg" alt="" loading="lazy" decoding="async" style="--x: 91.2%; --y: 55.8%; --r: -4.1deg; --s: 0.77; --w: 145px;" />
-      <img src="images/photo-13.jpg" alt="" loading="lazy" decoding="async" style="--x: 20.8%; --y: 80.6%; --r: 10.1deg; --s: 1.03; --w: 129px;" />
-      <img src="images/photo-14.jpg" alt="" loading="lazy" decoding="async" style="--x: 75.9%; --y: 92.7%; --r: -4.5deg; --s: 0.93; --w: 149px;" />
-      <img src="images/photo-15.jpg" alt="" loading="lazy" decoding="async" style="--x: 13.6%; --y: 78.1%; --r: -3.7deg; --s: 0.97; --w: 148px;" />
-      <img src="images/photo-16.jpg" alt="" loading="lazy" decoding="async" style="--x: 17.3%; --y: 64.2%; --r: 6.8deg; --s: 0.89; --w: 155px;" />
-      <img src="images/photo-17.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.9%; --y: 45.9%; --r: 3.8deg; --s: 0.77; --w: 107px;" />
-      <img src="images/photo-18.jpg" alt="" loading="lazy" decoding="async" style="--x: 52.9%; --y: 10.5%; --r: 5.5deg; --s: 0.89; --w: 158px;" />
-      <img src="images/photo-19.jpg" alt="" loading="lazy" decoding="async" style="--x: 94.9%; --y: 69.3%; --r: 8.1deg; --s: 0.79; --w: 125px;" />
-      <img src="images/photo-20.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.3%; --y: 7.7%; --r: -7.2deg; --s: 0.95; --w: 93px;" />
-      <img src="images/photo-21.jpg" alt="" loading="lazy" decoding="async" style="--x: 31.8%; --y: 76.2%; --r: -10.2deg; --s: 0.98; --w: 94px;" />
-      <img src="images/photo-22.jpg" alt="" loading="lazy" decoding="async" style="--x: 81.3%; --y: 41.0%; --r: -9.1deg; --s: 0.96; --w: 130px;" />
-      <img src="images/photo-23.jpg" alt="" loading="lazy" decoding="async" style="--x: 11.0%; --y: 57.5%; --r: 8.9deg; --s: 0.76; --w: 131px;" />
-      <img src="images/photo-24.jpg" alt="" loading="lazy" decoding="async" style="--x: 58.7%; --y: 87.8%; --r: -6.6deg; --s: 0.8; --w: 157px;" />
-      <img src="images/photo-25.jpg" alt="" loading="lazy" decoding="async" style="--x: 16.6%; --y: 56.9%; --r: -10.0deg; --s: 0.85; --w: 112px;" />
-      <img src="images/photo-26.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.9%; --y: 50.6%; --r: 0.8deg; --s: 0.81; --w: 107px;" />
-      <img src="images/photo-27.jpg" alt="" loading="lazy" decoding="async" style="--x: 15.2%; --y: 18.1%; --r: -9.0deg; --s: 0.77; --w: 148px;" />
-      <img src="images/photo-28.jpg" alt="" loading="lazy" decoding="async" style="--x: 95.2%; --y: 42.2%; --r: -5.4deg; --s: 0.9; --w: 122px;" />
-      <img src="images/photo-29.jpg" alt="" loading="lazy" decoding="async" style="--x: 33.1%; --y: 94.5%; --r: 5.0deg; --s: 0.84; --w: 117px;" />
-      <img src="images/photo-30.jpg" alt="" loading="lazy" decoding="async" style="--x: 93.3%; --y: 80.4%; --r: 5.3deg; --s: 0.83; --w: 100px;" />
-      <img src="images/photo-31.jpg" alt="" loading="lazy" decoding="async" style="--x: 37.5%; --y: 86.3%; --r: 3.1deg; --s: 0.93; --w: 95px;" />
-      <img src="images/photo-32.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.5%; --y: 32.0%; --r: 3.8deg; --s: 0.95; --w: 121px;" />
-      <img src="images/photo-33.jpg" alt="" loading="lazy" decoding="async" style="--x: 27.1%; --y: 24.8%; --r: -1.1deg; --s: 0.82; --w: 105px;" />
-      <img src="images/photo-34.jpg" alt="" loading="lazy" decoding="async" style="--x: 88.1%; --y: 50.7%; --r: -7.7deg; --s: 1.02; --w: 139px;" />
-      <img src="images/photo-35.jpg" alt="" loading="lazy" decoding="async" style="--x: 89.8%; --y: 16.2%; --r: 3.1deg; --s: 0.77; --w: 129px;" />
-      <img src="images/photo-36.jpg" alt="" loading="lazy" decoding="async" style="--x: 22.4%; --y: 78.3%; --r: 4.3deg; --s: 0.91; --w: 150px;" />
-      <img src="images/photo-37.jpg" alt="" loading="lazy" decoding="async" style="--x: 94.3%; --y: 35.3%; --r: 3.0deg; --s: 1.04; --w: 157px;" />
-      <img src="images/photo-38.jpg" alt="" loading="lazy" decoding="async" style="--x: 27.6%; --y: 51.8%; --r: -2.6deg; --s: 0.77; --w: 143px;" />
-      <img src="images/photo-39.jpg" alt="" loading="lazy" decoding="async" style="--x: 6.8%; --y: 64.5%; --r: -11.5deg; --s: 0.83; --w: 101px;" />
-      <img src="images/photo-40.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.6%; --y: 50.6%; --r: 2.5deg; --s: 0.81; --w: 144px;" />
-      <img src="images/photo-41.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.0%; --y: 4.2%; --r: 11.6deg; --s: 0.77; --w: 158px;" />
-      <img src="images/photo-42.jpg" alt="" loading="lazy" decoding="async" style="--x: 48.6%; --y: 93.8%; --r: -3.9deg; --s: 1.01; --w: 124px;" />
-    </div>
     <div class="page">
+      <div class="photo-sprinkle" aria-hidden="true">
+        <img src="images/photo-01.jpg" alt="" loading="lazy" decoding="async" style="--x: 29.7%; --y: 4%; --r: -8.2deg; --s: 1.06; --w: 258px;" />
+        <img src="images/photo-02.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.3%; --y: 6.8%; --r: 0.7deg; --s: 0.99; --w: 250px;" />
+        <img src="images/photo-03.jpg" alt="" loading="lazy" decoding="async" style="--x: 24.3%; --y: 12.5%; --r: 3.1deg; --s: 1.06; --w: 250px;" />
+        <img src="images/photo-04.jpg" alt="" loading="lazy" decoding="async" style="--x: 67.9%; --y: 11.9%; --r: 8.8deg; --s: 1.12; --w: 246px;" />
+        <img src="images/photo-05.jpg" alt="" loading="lazy" decoding="async" style="--x: 29.7%; --y: 15.4%; --r: -5.9deg; --s: 1.01; --w: 214px;" />
+        <img src="images/photo-06.jpg" alt="" loading="lazy" decoding="async" style="--x: 79.2%; --y: 18.6%; --r: -4.7deg; --s: 1.02; --w: 216px;" />
+        <img src="images/photo-07.jpg" alt="" loading="lazy" decoding="async" style="--x: 23.4%; --y: 16.7%; --r: -3.6deg; --s: 1.1; --w: 194px;" />
+        <img src="images/photo-08.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.5%; --y: 20.3%; --r: 8.5deg; --s: 1.01; --w: 250px;" />
+        <img src="images/photo-09.jpg" alt="" loading="lazy" decoding="async" style="--x: 26.5%; --y: 24.0%; --r: 3.3deg; --s: 0.96; --w: 186px;" />
+        <img src="images/photo-10.jpg" alt="" loading="lazy" decoding="async" style="--x: 72.9%; --y: 23.6%; --r: 3.6deg; --s: 0.96; --w: 258px;" />
+        <img src="images/photo-11.jpg" alt="" loading="lazy" decoding="async" style="--x: 15.9%; --y: 24.4%; --r: 9.0deg; --s: 1.06; --w: 201px;" />
+        <img src="images/photo-12.jpg" alt="" loading="lazy" decoding="async" style="--x: 70.0%; --y: 29.7%; --r: -6.6deg; --s: 1.11; --w: 239px;" />
+        <img src="images/photo-13.jpg" alt="" loading="lazy" decoding="async" style="--x: 21.2%; --y: 34.5%; --r: 2.9deg; --s: 1.02; --w: 202px;" />
+        <img src="images/photo-14.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.8%; --y: 31.4%; --r: -7.0deg; --s: 1.14; --w: 186px;" />
+        <img src="images/photo-15.jpg" alt="" loading="lazy" decoding="async" style="--x: 24.7%; --y: 32.9%; --r: 6.1deg; --s: 1.05; --w: 238px;" />
+        <img src="images/photo-16.jpg" alt="" loading="lazy" decoding="async" style="--x: 81.8%; --y: 36.6%; --r: 6.4deg; --s: 1.14; --w: 226px;" />
+        <img src="images/photo-17.jpg" alt="" loading="lazy" decoding="async" style="--x: 35.3%; --y: 40.0%; --r: -0.1deg; --s: 1.11; --w: 200px;" />
+        <img src="images/photo-18.jpg" alt="" loading="lazy" decoding="async" style="--x: 90.6%; --y: 45.1%; --r: 5.6deg; --s: 1.06; --w: 246px;" />
+        <img src="images/photo-19.jpg" alt="" loading="lazy" decoding="async" style="--x: 29.4%; --y: 47.1%; --r: -0.8deg; --s: 1.13; --w: 251px;" />
+        <img src="images/photo-20.jpg" alt="" loading="lazy" decoding="async" style="--x: 89.6%; --y: 45.7%; --r: 5.0deg; --s: 1.02; --w: 258px;" />
+        <img src="images/photo-21.jpg" alt="" loading="lazy" decoding="async" style="--x: 14.1%; --y: 45.7%; --r: -6.4deg; --s: 1.06; --w: 202px;" />
+        <img src="images/photo-22.jpg" alt="" loading="lazy" decoding="async" style="--x: 64.5%; --y: 47.8%; --r: -3.8deg; --s: 1.0; --w: 190px;" />
+        <img src="images/photo-23.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.7%; --y: 50.1%; --r: -1.6deg; --s: 1.08; --w: 213px;" />
+        <img src="images/photo-24.jpg" alt="" loading="lazy" decoding="async" style="--x: 75.2%; --y: 52.2%; --r: -0.6deg; --s: 1.05; --w: 194px;" />
+        <img src="images/photo-25.jpg" alt="" loading="lazy" decoding="async" style="--x: 22.3%; --y: 61.1%; --r: -1.3deg; --s: 0.98; --w: 195px;" />
+        <img src="images/photo-26.jpg" alt="" loading="lazy" decoding="async" style="--x: 79.7%; --y: 62.0%; --r: 1.9deg; --s: 0.99; --w: 184px;" />
+        <img src="images/photo-27.jpg" alt="" loading="lazy" decoding="async" style="--x: 28.3%; --y: 62.4%; --r: 6.7deg; --s: 0.95; --w: 246px;" />
+        <img src="images/photo-28.jpg" alt="" loading="lazy" decoding="async" style="--x: 67.0%; --y: 65.9%; --r: 9.0deg; --s: 1.1; --w: 190px;" />
+        <img src="images/photo-29.jpg" alt="" loading="lazy" decoding="async" style="--x: 35.6%; --y: 69.8%; --r: -3.1deg; --s: 1.05; --w: 257px;" />
+        <img src="images/photo-30.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.7%; --y: 66.4%; --r: -8.5deg; --s: 1.11; --w: 238px;" />
+        <img src="images/photo-31.jpg" alt="" loading="lazy" decoding="async" style="--x: 18.5%; --y: 71.8%; --r: 3.2deg; --s: 1.08; --w: 233px;" />
+        <img src="images/photo-32.jpg" alt="" loading="lazy" decoding="async" style="--x: 80.0%; --y: 75.8%; --r: 8.9deg; --s: 1.14; --w: 200px;" />
+        <img src="images/photo-33.jpg" alt="" loading="lazy" decoding="async" style="--x: 32.6%; --y: 71.8%; --r: 7.4deg; --s: 0.98; --w: 197px;" />
+        <img src="images/photo-34.jpg" alt="" loading="lazy" decoding="async" style="--x: 82.0%; --y: 74.5%; --r: 2.9deg; --s: 1.01; --w: 215px;" />
+        <img src="images/photo-35.jpg" alt="" loading="lazy" decoding="async" style="--x: 23.8%; --y: 82.9%; --r: -5.9deg; --s: 1.03; --w: 188px;" />
+        <img src="images/photo-36.jpg" alt="" loading="lazy" decoding="async" style="--x: 91.9%; --y: 80.9%; --r: 6.5deg; --s: 1.06; --w: 217px;" />
+        <img src="images/photo-37.jpg" alt="" loading="lazy" decoding="async" style="--x: 16.6%; --y: 80.8%; --r: 0.1deg; --s: 1.05; --w: 222px;" />
+        <img src="images/photo-38.jpg" alt="" loading="lazy" decoding="async" style="--x: 69.7%; --y: 85.5%; --r: 1.7deg; --s: 1.08; --w: 233px;" />
+        <img src="images/photo-39.jpg" alt="" loading="lazy" decoding="async" style="--x: 17.3%; --y: 87.2%; --r: 4.4deg; --s: 1.11; --w: 196px;" />
+        <img src="images/photo-40.jpg" alt="" loading="lazy" decoding="async" style="--x: 71.4%; --y: 93.9%; --r: 5.0deg; --s: 1.09; --w: 257px;" />
+        <img src="images/photo-41.jpg" alt="" loading="lazy" decoding="async" style="--x: 20.4%; --y: 92.8%; --r: 4.1deg; --s: 1.1; --w: 204px;" />
+        <img src="images/photo-42.jpg" alt="" loading="lazy" decoding="async" style="--x: 93.4%; --y: 95.1%; --r: 3.3deg; --s: 1.01; --w: 223px;" />
+      </div>
       <header class="hero">
         <div class="badge">謹賀新年</div>
         <h1>あけましておめでとうございます</h1>
@@ -76,9 +76,10 @@
 
           <div class="message">
             <p class="message-title">お告げ</p>
-            <p class="message-body">「新年あけましておめでとう」というのは伝わっているでしょう。次は以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
+            <p class="message-body">「新年あけましておめでとう」というのは伝わっているでしょう。では以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
             "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
-            "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br /><br />
+            "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br />
+            "お前次第だろ"（喜怒哀楽をどう感じるのかは自分にしか決められない。自分が良いと思う感じ方に自分がすれば良い）— S・F(or L)・Y</S><br /><br />
 
             君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。<br />
             投げることが好きでも人生は投げないようにしましょう。<br />
@@ -95,7 +96,9 @@
                 お使いのブラウザは video タグに対応していません。
               </video>
               <p class="caption">
-                <span class="mono">public/videos/newyear.mp4</span> を配置すると再生できます。
+                本当は何かしらピンネタやろうかなと思っていたんですが...<br />
+                ごちゃごちゃ動いたり、動かしたりするとサイズが大きくなりがちなので、諦めました<br />
+                1年、いや100年の人生楽しもう。あざした〜〜
               </p>
             </div>
           </div>
