画像ファイル調整、

--- a/public/index.html
+++ b/public/index.html
@@ -15,101 +15,105 @@
   </head>
   <body>
     <div class="page">
-      <div class="photo-sprinkle" aria-hidden="true">
-        <img src="images/photo-01.jpg" alt="" loading="lazy" decoding="async" style="--x: 29.7%; --y: 4%; --r: -8.2deg; --s: 1.06; --w: 258px;" />
-        <img src="images/photo-02.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.3%; --y: 6.8%; --r: 0.7deg; --s: 0.99; --w: 250px;" />
-        <img src="images/photo-03.jpg" alt="" loading="lazy" decoding="async" style="--x: 24.3%; --y: 12.5%; --r: 3.1deg; --s: 1.06; --w: 250px;" />
-        <img src="images/photo-04.jpg" alt="" loading="lazy" decoding="async" style="--x: 67.9%; --y: 11.9%; --r: 8.8deg; --s: 1.12; --w: 246px;" />
-        <img src="images/photo-05.jpg" alt="" loading="lazy" decoding="async" style="--x: 29.7%; --y: 15.4%; --r: -5.9deg; --s: 1.01; --w: 214px;" />
-        <img src="images/photo-06.jpg" alt="" loading="lazy" decoding="async" style="--x: 79.2%; --y: 18.6%; --r: -4.7deg; --s: 1.02; --w: 216px;" />
-        <img src="images/photo-07.jpg" alt="" loading="lazy" decoding="async" style="--x: 23.4%; --y: 16.7%; --r: -3.6deg; --s: 1.1; --w: 194px;" />
-        <img src="images/photo-08.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.5%; --y: 20.3%; --r: 8.5deg; --s: 1.01; --w: 250px;" />
-        <img src="images/photo-09.jpg" alt="" loading="lazy" decoding="async" style="--x: 26.5%; --y: 24.0%; --r: 3.3deg; --s: 0.96; --w: 186px;" />
-        <img src="images/photo-10.jpg" alt="" loading="lazy" decoding="async" style="--x: 72.9%; --y: 23.6%; --r: 3.6deg; --s: 0.96; --w: 258px;" />
-        <img src="images/photo-11.jpg" alt="" loading="lazy" decoding="async" style="--x: 15.9%; --y: 24.4%; --r: 9.0deg; --s: 1.06; --w: 201px;" />
-        <img src="images/photo-12.jpg" alt="" loading="lazy" decoding="async" style="--x: 70.0%; --y: 29.7%; --r: -6.6deg; --s: 1.11; --w: 239px;" />
-        <img src="images/photo-13.jpg" alt="" loading="lazy" decoding="async" style="--x: 21.2%; --y: 34.5%; --r: 2.9deg; --s: 1.02; --w: 202px;" />
-        <img src="images/photo-14.jpg" alt="" loading="lazy" decoding="async" style="--x: 76.8%; --y: 31.4%; --r: -7.0deg; --s: 1.14; --w: 186px;" />
-        <img src="images/photo-15.jpg" alt="" loading="lazy" decoding="async" style="--x: 24.7%; --y: 32.9%; --r: 6.1deg; --s: 1.05; --w: 238px;" />
-        <img src="images/photo-16.jpg" alt="" loading="lazy" decoding="async" style="--x: 81.8%; --y: 36.6%; --r: 6.4deg; --s: 1.14; --w: 226px;" />
-        <img src="images/photo-17.jpg" alt="" loading="lazy" decoding="async" style="--x: 35.3%; --y: 40.0%; --r: -0.1deg; --s: 1.11; --w: 200px;" />
-        <img src="images/photo-18.jpg" alt="" loading="lazy" decoding="async" style="--x: 90.6%; --y: 45.1%; --r: 5.6deg; --s: 1.06; --w: 246px;" />
-        <img src="images/photo-19.jpg" alt="" loading="lazy" decoding="async" style="--x: 29.4%; --y: 47.1%; --r: -0.8deg; --s: 1.13; --w: 251px;" />
-        <img src="images/photo-20.jpg" alt="" loading="lazy" decoding="async" style="--x: 89.6%; --y: 45.7%; --r: 5.0deg; --s: 1.02; --w: 258px;" />
-        <img src="images/photo-21.jpg" alt="" loading="lazy" decoding="async" style="--x: 14.1%; --y: 45.7%; --r: -6.4deg; --s: 1.06; --w: 202px;" />
-        <img src="images/photo-22.jpg" alt="" loading="lazy" decoding="async" style="--x: 64.5%; --y: 47.8%; --r: -3.8deg; --s: 1.0; --w: 190px;" />
-        <img src="images/photo-23.jpg" alt="" loading="lazy" decoding="async" style="--x: 25.7%; --y: 50.1%; --r: -1.6deg; --s: 1.08; --w: 213px;" />
-        <img src="images/photo-24.jpg" alt="" loading="lazy" decoding="async" style="--x: 75.2%; --y: 52.2%; --r: -0.6deg; --s: 1.05; --w: 194px;" />
-        <img src="images/photo-25.jpg" alt="" loading="lazy" decoding="async" style="--x: 22.3%; --y: 61.1%; --r: -1.3deg; --s: 0.98; --w: 195px;" />
-        <img src="images/photo-26.jpg" alt="" loading="lazy" decoding="async" style="--x: 79.7%; --y: 62.0%; --r: 1.9deg; --s: 0.99; --w: 184px;" />
-        <img src="images/photo-27.jpg" alt="" loading="lazy" decoding="async" style="--x: 28.3%; --y: 62.4%; --r: 6.7deg; --s: 0.95; --w: 246px;" />
-        <img src="images/photo-28.jpg" alt="" loading="lazy" decoding="async" style="--x: 67.0%; --y: 65.9%; --r: 9.0deg; --s: 1.1; --w: 190px;" />
-        <img src="images/photo-29.jpg" alt="" loading="lazy" decoding="async" style="--x: 35.6%; --y: 69.8%; --r: -3.1deg; --s: 1.05; --w: 257px;" />
-        <img src="images/photo-30.jpg" alt="" loading="lazy" decoding="async" style="--x: 84.7%; --y: 66.4%; --r: -8.5deg; --s: 1.11; --w: 238px;" />
-        <img src="images/photo-31.jpg" alt="" loading="lazy" decoding="async" style="--x: 18.5%; --y: 71.8%; --r: 3.2deg; --s: 1.08; --w: 233px;" />
-        <img src="images/photo-32.jpg" alt="" loading="lazy" decoding="async" style="--x: 80.0%; --y: 75.8%; --r: 8.9deg; --s: 1.14; --w: 200px;" />
-        <img src="images/photo-33.jpg" alt="" loading="lazy" decoding="async" style="--x: 32.6%; --y: 71.8%; --r: 7.4deg; --s: 0.98; --w: 197px;" />
-        <img src="images/photo-34.jpg" alt="" loading="lazy" decoding="async" style="--x: 82.0%; --y: 74.5%; --r: 2.9deg; --s: 1.01; --w: 215px;" />
-        <img src="images/photo-35.jpg" alt="" loading="lazy" decoding="async" style="--x: 23.8%; --y: 82.9%; --r: -5.9deg; --s: 1.03; --w: 188px;" />
-        <img src="images/photo-36.jpg" alt="" loading="lazy" decoding="async" style="--x: 91.9%; --y: 80.9%; --r: 6.5deg; --s: 1.06; --w: 217px;" />
-        <img src="images/photo-37.jpg" alt="" loading="lazy" decoding="async" style="--x: 16.6%; --y: 80.8%; --r: 0.1deg; --s: 1.05; --w: 222px;" />
-        <img src="images/photo-38.jpg" alt="" loading="lazy" decoding="async" style="--x: 69.7%; --y: 85.5%; --r: 1.7deg; --s: 1.08; --w: 233px;" />
-        <img src="images/photo-39.jpg" alt="" loading="lazy" decoding="async" style="--x: 17.3%; --y: 87.2%; --r: 4.4deg; --s: 1.11; --w: 196px;" />
-        <img src="images/photo-40.jpg" alt="" loading="lazy" decoding="async" style="--x: 71.4%; --y: 93.9%; --r: 5.0deg; --s: 1.09; --w: 257px;" />
-        <img src="images/photo-41.jpg" alt="" loading="lazy" decoding="async" style="--x: 20.4%; --y: 92.8%; --r: 4.1deg; --s: 1.1; --w: 204px;" />
-        <img src="images/photo-42.jpg" alt="" loading="lazy" decoding="async" style="--x: 93.4%; --y: 95.1%; --r: 3.3deg; --s: 1.01; --w: 223px;" />
-      </div>
-      <header class="hero">
-        <div class="badge">謹賀新年</div>
-        <h1>あけましておめでとうございます</h1>
-        <p class="lead">
-          <span id="main-year">2026</span>年もよろしくお願いいたします。
-        </p>
-      </header>
-
-      <main class="content">
-        <section id="main" class="panel">
-          <h2>読めばいいと思うよ</h2>
-          <p class="lead-sub">
-            
+      <aside class="photo-rail left" aria-hidden="true">
+        <img src="images/photo-01.jpg" alt="" loading="lazy" decoding="async" style="--r: -3.2deg; --s: 1.05; --w: 234px; --tx: -5.6px; --ty: -15.2px; --dur: 18.5s; --delay: -6.8s;" />
+        <img src="images/photo-03.jpg" alt="" loading="lazy" decoding="async" style="--r: -5.0deg; --s: 1.06; --w: 273px; --tx: -13.9px; --ty: -15.1px; --dur: 13.8s; --delay: -9.9s;" />
+        <img src="images/photo-05.jpg" alt="" loading="lazy" decoding="async" style="--r: -3.6deg; --s: 1.00; --w: 315px; --tx: 2.2px; --ty: -1.0px; --dur: 12.3s; --delay: -0.5s;" />
+        <img src="images/photo-07.jpg" alt="" loading="lazy" decoding="async" style="--r: 0.6deg; --s: 1.06; --w: 305px; --tx: 18.2px; --ty: 16.1px; --dur: 19.0s; --delay: -1.5s;" />
+        <img src="images/photo-09.jpg" alt="" loading="lazy" decoding="async" style="--r: 8.3deg; --s: 1.04; --w: 225px; --tx: -1.6px; --ty: 14.2px; --dur: 18.1s; --delay: -12.7s;" />
+        <img src="images/photo-11.jpg" alt="" loading="lazy" decoding="async" style="--r: 2.2deg; --s: 1.07; --w: 280px; --tx: -21.1px; --ty: 5.7px; --dur: 13.3s; --delay: -9.9s;" />
+        <img src="images/photo-13.jpg" alt="" loading="lazy" decoding="async" style="--r: -4.6deg; --s: 0.99; --w: 308px; --tx: 16.0px; --ty: 16.8px; --dur: 17.6s; --delay: -1.4s;" />
+        <img src="images/photo-15.jpg" alt="" loading="lazy" decoding="async" style="--r: 7.2deg; --s: 1.07; --w: 309px; --tx: 7.5px; --ty: -4.8px; --dur: 14.3s; --delay: -4.5s;" />
+        <img src="images/photo-17.jpg" alt="" loading="lazy" decoding="async" style="--r: -6.3deg; --s: 1.08; --w: 316px; --tx: -15.5px; --ty: 7.0px; --dur: 12.7s; --delay: -10.3s;" />
+        <img src="images/photo-19.jpg" alt="" loading="lazy" decoding="async" style="--r: -1.0deg; --s: 1.05; --w: 243px; --tx: -7.8px; --ty: 12.5px; --dur: 13.1s; --delay: -6.2s;" />
+        <img src="images/photo-21.jpg" alt="" loading="lazy" decoding="async" style="--r: 8.1deg; --s: 1.02; --w: 224px; --tx: 14.4px; --ty: -9.1px; --dur: 14.2s; --delay: -1.2s;" />
+        <img src="images/photo-23.jpg" alt="" loading="lazy" decoding="async" style="--r: 2.2deg; --s: 1.00; --w: 245px; --tx: 19.3px; --ty: 2.3px; --dur: 16.2s; --delay: -0.4s;" />
+        <img src="images/photo-25.jpg" alt="" loading="lazy" decoding="async" style="--r: 2.1deg; --s: 1.04; --w: 248px; --tx: 15.7px; --ty: -17.9px; --dur: 18.0s; --delay: -4.8s;" />
+        <img src="images/photo-27.jpg" alt="" loading="lazy" decoding="async" style="--r: -8.4deg; --s: 0.96; --w: 272px; --tx: 7.6px; --ty: 6.9px; --dur: 13.8s; --delay: -5.0s;" />
+        <img src="images/photo-29.jpg" alt="" loading="lazy" decoding="async" style="--r: 1.2deg; --s: 0.97; --w: 252px; --tx: -17.9px; --ty: 17.3px; --dur: 17.8s; --delay: -9.1s;" />
+        <img src="images/photo-31.jpg" alt="" loading="lazy" decoding="async" style="--r: -4.5deg; --s: 0.99; --w: 297px; --tx: 18.3px; --ty: -6.9px; --dur: 18.4s; --delay: -8.4s;" />
+        <img src="images/photo-33.jpg" alt="" loading="lazy" decoding="async" style="--r: -2.4deg; --s: 0.98; --w: 310px; --tx: -17.1px; --ty: -8.9px; --dur: 12.7s; --delay: -6.4s;" />
+        <img src="images/photo-35.jpg" alt="" loading="lazy" decoding="async" style="--r: 5.9deg; --s: 0.98; --w: 262px; --tx: 20.7px; --ty: 9.3px; --dur: 12.3s; --delay: -13.1s;" />
+        <img src="images/photo-37.jpg" alt="" loading="lazy" decoding="async" style="--r: 0.9deg; --s: 1.07; --w: 244px; --tx: 19.5px; --ty: -7.2px; --dur: 12.4s; --delay: -3.3s;" />
+        <img src="images/photo-39.jpg" alt="" loading="lazy" decoding="async" style="--r: 5.7deg; --s: 1.07; --w: 270px; --tx: 10.5px; --ty: 14.9px; --dur: 19.6s; --delay: -12.1s;" />
+        <img src="images/photo-41.jpg" alt="" loading="lazy" decoding="async" style="--r: -8.5deg; --s: 1.04; --w: 280px; --tx: -0.9px; --ty: -13.8px; --dur: 12.3s; --delay: -11.1s;" />
+      </aside>
+      <div class="content-wrap">
+  <header class="hero">
+          <div class="badge">謹賀新年</div>
+          <h1>あけましておめでとうございます</h1>
+          <p class="lead">
+            <span id="main-year">2026</span>年もよろしくお願いいたします。
           </p>
+        </header>
 
-          <div class="message">
-            <p class="message-title">お告げ</p>
-            <p class="message-body">「新年あけましておめでとう」というのは伝わっているでしょう。では以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
-            "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
-            "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br />
-            "お前次第だろ"（喜怒哀楽をどう感じるのかは自分にしか決められない。自分が良いと思う感じ方に自分がすれば良い）— S・F(or L)・Y</S><br /><br />
-
-            君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。<br />
-            投げることが好きでも人生は投げないようにしましょう。<br />
-            何かを投げたくなったら「仕事」「言葉」「判断」をなげましょう。きっと気が楽になることでしょう。<br />
-            ~~中略~~<br />
-            ということで、「人生を楽しめよ」という話は終わりにします。あざした〜😎
+        <main class="content">
+          <section id="main" class="panel">
+            <h2>読めばいいと思うよ</h2>
+            <p class="lead-sub">
+            
             </p>
-          </div>
 
-          <div class="video-grid">
-            <div class="video-card">
-              <video controls playsinline preload="metadata">
-                <source src="videos/newyear.mp4" type="video/mp4" />
-                お使いのブラウザは video タグに対応していません。
-              </video>
-              <p class="caption">
-                本当は何かしらピンネタやろうかなと思っていたんですが...<br />
-                ごちゃごちゃ動いたり、動かしたりするとサイズが大きくなりがちなので、諦めました<br />
-                1年、いや100年の人生楽しもう。あざした〜〜
+            <div class="message">
+              <p class="message-title">お告げ</p>
+              <p class="message-body">「新年あけましておめでとう」というのは伝わっているでしょう。では以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
+              "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
+              "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br />
+              "お前次第だろ"（喜怒哀楽をどう感じるのかは自分にしか決められない。自分が良いと思う感じ方に自分がすれば良い）— S・F(or L)・Y</S><br /><br />
+
+              君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。<br />
+              投げることが好きでも人生は投げないようにしましょう。<br />
+              何かを投げたくなったら「仕事」「言葉」「判断」をなげましょう。きっと気が楽になることでしょう。<br />
+              ~~中略~~<br />
+              ということで、「人生を楽しめよ」という話は終わりにします。あざした〜😎
               </p>
             </div>
-          </div>
-        </section>
-      </main>
 
-      <footer class="footer">
-        <span>Happy New Year</span>
-        <span class="divider">•</span>
-        <span id="footer-year">2026</span>
-      </footer>
+            <div class="video-grid">
+              <div class="video-card">
+                <video controls playsinline preload="metadata">
+                  <source src="videos/newyear.mp4" type="video/mp4" />
+                </video>
+                <p class="caption">
+                  本当は何かしらピンネタやろうかなと思っていたんですが...<br />
+                  ごちゃごちゃ動いたり、動かしたりするとサイズが大きくなりがちなので、諦めました<br />
+                  1年、いや100年の人生楽しもう。あざした〜〜
+                </p>
+              </div>
+            </div>
+          </section>
+        </main>
+
+        <footer class="footer">
+          <span>Happy New Year</span>
+          <span class="divider">•</span>
+          <span id="footer-year">2026</span>
+        </footer>
+      </div>
+      <aside class="photo-rail right" aria-hidden="true">
+        <img src="images/photo-02.jpg" alt="" loading="lazy" decoding="async" style="--r: -3.4deg; --s: 0.97; --w: 238px; --tx: -1.8px; --ty: -10.2px; --dur: 13.3s; --delay: -13.1s;" />
+        <img src="images/photo-04.jpg" alt="" loading="lazy" decoding="async" style="--r: 5.7deg; --s: 0.98; --w: 288px; --tx: -0.4px; --ty: 2.0px; --dur: 12.3s; --delay: -0.2s;" />
+        <img src="images/photo-06.jpg" alt="" loading="lazy" decoding="async" style="--r: 6.8deg; --s: 1.06; --w: 263px; --tx: 11.3px; --ty: 11.4px; --dur: 19.0s; --delay: -9.3s;" />
+        <img src="images/photo-08.jpg" alt="" loading="lazy" decoding="async" style="--r: 2.6deg; --s: 1.03; --w: 307px; --tx: -13.3px; --ty: -1.2px; --dur: 13.5s; --delay: -8.6s;" />
+        <img src="images/photo-10.jpg" alt="" loading="lazy" decoding="async" style="--r: 6.3deg; --s: 0.99; --w: 293px; --tx: -17.1px; --ty: -0.6px; --dur: 14.9s; --delay: -9.9s;" />
+        <img src="images/photo-12.jpg" alt="" loading="lazy" decoding="async" style="--r: -5.9deg; --s: 1.07; --w: 243px; --tx: -15.5px; --ty: 17.5px; --dur: 12.7s; --delay: -11.3s;" />
+        <img src="images/photo-14.jpg" alt="" loading="lazy" decoding="async" style="--r: 3.7deg; --s: 1.06; --w: 268px; --tx: -17.3px; --ty: 12.2px; --dur: 19.3s; --delay: -5.7s;" />
+        <img src="images/photo-16.jpg" alt="" loading="lazy" decoding="async" style="--r: -3.0deg; --s: 1.03; --w: 283px; --tx: -1.0px; --ty: 12.3px; --dur: 16.4s; --delay: -1.8s;" />
+        <img src="images/photo-18.jpg" alt="" loading="lazy" decoding="async" style="--r: -7.5deg; --s: 1.01; --w: 299px; --tx: -12.3px; --ty: 4.8px; --dur: 13.9s; --delay: -5.0s;" />
+        <img src="images/photo-20.jpg" alt="" loading="lazy" decoding="async" style="--r: 6.0deg; --s: 1.07; --w: 299px; --tx: -5.9px; --ty: 14.0px; --dur: 15.9s; --delay: -11.5s;" />
+        <img src="images/photo-22.jpg" alt="" loading="lazy" decoding="async" style="--r: 8.8deg; --s: 0.98; --w: 307px; --tx: 0.3px; --ty: -1.5px; --dur: 18.9s; --delay: -4.9s;" />
+        <img src="images/photo-24.jpg" alt="" loading="lazy" decoding="async" style="--r: 6.3deg; --s: 1.01; --w: 232px; --tx: 3.1px; --ty: -16.7px; --dur: 17.2s; --delay: -1.0s;" />
+        <img src="images/photo-26.jpg" alt="" loading="lazy" decoding="async" style="--r: -1.3deg; --s: 1.06; --w: 278px; --tx: 7.2px; --ty: 7.9px; --dur: 14.2s; --delay: -1.8s;" />
+        <img src="images/photo-28.jpg" alt="" loading="lazy" decoding="async" style="--r: 7.8deg; --s: 1.05; --w: 312px; --tx: 5.5px; --ty: 8.3px; --dur: 12.4s; --delay: -10.9s;" />
+        <img src="images/photo-30.jpg" alt="" loading="lazy" decoding="async" style="--r: 4.2deg; --s: 1.00; --w: 260px; --tx: -0.9px; --ty: -8.7px; --dur: 15.4s; --delay: -2.9s;" />
+        <img src="images/photo-32.jpg" alt="" loading="lazy" decoding="async" style="--r: 8.3deg; --s: 1.02; --w: 302px; --tx: 21.4px; --ty: -11.5px; --dur: 16.9s; --delay: -13.8s;" />
+        <img src="images/photo-34.jpg" alt="" loading="lazy" decoding="async" style="--r: -0.9deg; --s: 1.01; --w: 281px; --tx: -15.7px; --ty: 13.1px; --dur: 17.3s; --delay: -4.9s;" />
+        <img src="images/photo-36.jpg" alt="" loading="lazy" decoding="async" style="--r: -1.5deg; --s: 1.00; --w: 225px; --tx: -0.3px; --ty: -17.4px; --dur: 12.6s; --delay: -9.9s;" />
+        <img src="images/photo-38.jpg" alt="" loading="lazy" decoding="async" style="--r: -2.3deg; --s: 1.03; --w: 283px; --tx: -2.8px; --ty: 15.7px; --dur: 17.9s; --delay: -9.6s;" />
+        <img src="images/photo-40.jpg" alt="" loading="lazy" decoding="async" style="--r: -6.8deg; --s: 1.07; --w: 270px; --tx: 10.6px; --ty: 17.8px; --dur: 19.5s; --delay: -2.9s;" />
+        <img src="images/photo-42.jpg" alt="" loading="lazy" decoding="async" style="--r: 7.7deg; --s: 1.05; --w: 288px; --tx: 19.2px; --ty: -15.8px; --dur: 12.9s; --delay: -3.3s;" />
+      </aside>
+
     </div>
 
     <script>
